--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="colorAccent">#FF4081</color>
     <color name="user_chat_bubble_color">#007899</color>
     <color name="peer_chat_bubble_color">#0c000000</color>
+    <color name="chat_edit_text_border_color">#0c000000</color>
     <color name="white">#fff</color>
     <color name="black">#000</color>
 </resources>
